add swagger 2.0 docs for auth handler fix doc bugs for posts handler
